# advent-of-code-2025

./: README.md  pyproject.toml
day-one/: day-one.py  day-one.txt
day-two/: day-two.py
day01/: day01.py  day01.txt
day02/: day02.py  day02.txt
day03/: day03.py  day03.txt
day04/: day04.py  day04.txt
